# agentic-docs-handler

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_STYLE.md  CURRENT_TASK.md  README.md  agentic-docs-design-spec.md  agentic-docs-handler-blueprint-v4.md  claude-code-transformation-guide.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.agents/research/: 2026-04-09-per-file-chat-pivot-audit.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
apps/chatgpt-widget/: package.json  tsconfig.json  vite.config.ts
docs/plans/: 2026-03-12-activity-feed.md  2026-03-12-metamorfos-design.md  2026-03-12-metamorfos.md  2026-03-12-processing-rail.md  2026-03-13-workspaces-design.md  2026-03-13-workspaces-implementation.md  2026-03-20-kill-mode-toggle.md  2026-04-01-blueprint-ui-features.md
docs/validation/: phase1-validation-report.md
legacy/mcp-docs-scaffold/: README.md  package-lock.json  package.json  (+1 more)
scripts/: collect_phase1_report.py  deploy_ai_server.sh  deploy_whisper_server.sh  run_phase1_benchmarks.py
server/: __init__.py  config.py  conversation_registry.py  document_registry.py  engagement_tracker.py  file_rules.yaml  locale.py  logging_config.py  main.py  realtime.py  requirements.txt  schemas.py  services.py  workspace_event_log.py  workspace_registry.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  ws_client.rs
whisper-server/: README.md  requirements.txt  whisper_server.py
(+281 files in other folders)
